--- a/angular-app/src/app/components/header/header.html
+++ b/angular-app/src/app/components/header/header.html
@@ -1,6 +1,6 @@
 <header>
   <nav>
-    <h1>My Angular App</h1>
+    <h1>{{ title() }}</h1>
     <ul>
       <li><a routerLink="/">Home</a></li>
       <li><a routerLink="/about">About</a></li>
