--- a/angular-app/src/app/components/header/header.html
+++ b/angular-app/src/app/components/header/header.html
@@ -1,10 +1,9 @@
 <header>
   <nav>
-    <h1>{{ title() }}</h1>
+    <h1 routerLink="/"> {{ title() }}</h1>
     <ul>
       <li><a routerLink="/">Home</a></li>
-      <li><a routerLink="/about">About</a></li>
-      <li><a routerLink="/contact">Contact</a></li>
+      <li><a routerLink="/todos">Todos</a></li>
     </ul>
   </nav>
 </header>
