--- a/angular-app/src/app/components/header/header.scss
+++ b/angular-app/src/app/components/header/header.scss
@@ -5,7 +5,13 @@ header {
   background-color: #333;
   color: white;
   margin: 0;
-  
+}
+
+header nav {
+  display : flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
 header nav ul {
@@ -16,9 +22,20 @@ header nav ul {
 header nav ul li {
   display: inline;
   margin-right: 1rem;
+  cursor: pointer;
+
 }
 
 header nav ul li a {
   text-decoration: none;
-  color: white;
+  color: rgb(240, 235, 235);
+  &:hover {
+    text-decoration: none;
+    color: aqua;
+  }
+
+  &:active {
+    font-weight: bold;
+    color: aqua;
+  }
 }
